objects/Callout_Logs__c.object
<CustomObject>
    <fields>
        <fullName>Callout_End__c</fullName>
        <label>Callout End</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Callout_Error__c</fullName>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Callout_Start__c</fullName>
        <label>Callout Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Callout_Statuscode__c</fullName>
        <label>Callout Statuscode</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Callout_Time_ms__c</fullName>
        <label>Callout Time (ms)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Callout_URL__c</fullName>
        <label>URL</label>
        <length>9999</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HeaderRequestedId__c</fullName>
        <label>Header Requested Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_Inputs__c</fullName>
        <description>this field would contain the  ivr inputs. will only be populated from search process callouts on snapdeal search page</description>
        <label>IVR Inputs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IVR_Output__c</fullName>
        <description>this field would coantain the ivr output url , will only be populated from snapdeal search page.</description>
        <label>IVR Output</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Post_Processing_Time_ms__c</fullName>
        <label>Post Processing Time (ms)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Processing_Time_ms__c</fullName>
        <label>Pre Processing Time (ms)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_End__c</fullName>
        <label>Process End</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Start__c</fullName>
        <label>Process Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Time_ms__c</fullName>
        <label>Process Time (ms)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request</label>
        <length>120000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <label>Response</label>
        <length>120000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Callout Logs</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Process__c</columns>
        <columns>Callout_URL__c</columns>
        <columns>Process_Time_ms__c</columns>
        <columns>Pre_Processing_Time_ms__c</columns>
        <columns>Callout_Time_ms__c</columns>
        <columns>Post_Processing_Time_ms__c</columns>
        <columns>Callout_Statuscode__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Buyer_System</fullName>
        <columns>NAME</columns>
        <columns>Process__c</columns>
        <columns>Callout_URL__c</columns>
        <columns>Request_Body__c</columns>
        <columns>Response_Body__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Buyer System</value>
        </filters>
        <label>Buyer System</label>
    </listViews>
    <listViews>
        <fullName>DT_Automation</fullName>
        <columns>NAME</columns>
        <columns>Process__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>contains</operation>
            <value>DT_Automation_Screen</value>
        </filters>
        <label>DT_Automation</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LMV</fullName>
        <columns>NAME</columns>
        <columns>Callout_URL__c</columns>
        <columns>Request_Body__c</columns>
        <columns>Response_Body__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>equals</operation>
            <value>Create LMV</value>
        </filters>
        <label>LMV</label>
    </listViews>
    <listViews>
        <fullName>My_Today_s_log</fullName>
        <columns>NAME</columns>
        <columns>Process__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Callout_URL__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>My Today&apos;s log</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RVS_Log</fullName>
        <columns>NAME</columns>
        <columns>Request_Body__c</columns>
        <columns>Process__c</columns>
        <columns>Response_Body__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>contains</operation>
            <value>RVS</value>
        </filters>
        <label>RVS Log</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rakesh_Perf_Run</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Process__c</columns>
        <columns>Callout_URL__c</columns>
        <columns>Process_Time_ms__c</columns>
        <columns>Pre_Processing_Time_ms__c</columns>
        <columns>Callout_Time_ms__c</columns>
        <columns>Post_Processing_Time_ms__c</columns>
        <columns>Callout_Statuscode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>4/2/2015 1:00 PM</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>notEqual</operation>
            <value>rchan</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>notEqual</operation>
            <value>inte</value>
        </filters>
        <label>Rakesh Perf Run</label>
    </listViews>
    <listViews>
        <fullName>Seller_System</fullName>
        <columns>NAME</columns>
        <columns>Process__c</columns>
        <columns>Callout_URL__c</columns>
        <columns>Request_Body__c</columns>
        <columns>Response_Body__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Seller System</value>
        </filters>
        <label>Seller System</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>Process__c</columns>
        <columns>Callout_URL__c</columns>
        <columns>Request_Body__c</columns>
        <columns>Response_Body__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Callout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Callout Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>